--- a/index.html
+++ b/index.html
@@ -380,7 +380,6 @@
                   <img
                     src="./images/portfolio/cashless-payment-mob.jpg"
                     alt="Cashless Payment"
-                    width="360"
                     class="portfolio-img"
                   />
                 </picture>
@@ -423,7 +422,6 @@
                   <img
                     src="./images/portfolio/meditation-app-mob.jpg"
                     alt="Meditation App"
-                    width="360"
                     class="portfolio-img"
                   />
                 </picture>
@@ -466,7 +464,6 @@
                   <img
                     src="./images/portfolio/taxi.jpg"
                     alt="Taxi Service"
-                    width="360"
                     class="portfolio-img"
                   />
                 </picture>
@@ -509,7 +506,6 @@
                   <img
                     src="./images/portfolio/screen-illustrations-mob.jpg"
                     alt="Screen Illustrations"
-                    width="360"
                     class="portfolio-img"
                   />
                 </picture>
@@ -552,7 +548,6 @@
                   <img
                     src="./images/portfolio/online-courses-mob.jpg"
                     alt="Online Courses"
-                    width="360"
                     class="portfolio-img"
                   />
                 </picture>
@@ -727,6 +722,77 @@
           <!-- button -->
           <button class="modal-send-button">Send</button>
         </form>
+      </div>
+    </div>
+    <!-- BURGER MENU -->
+    <div class="burger-menu is-open">
+      <div class="burger-menu-container">
+        <button class="modal-close-btn" type="button">
+          <svg class="modal-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-icon-close"></use>
+          </svg>
+        </button>
+        <nav class="menu-nav">
+          <ul class="menu-list">
+            <li class="menu-list-item">
+              <a href="./index.html" class="menu-list-link header-accent-link"
+                >Studio</a
+              >
+            </li>
+            <li class="menu-list-item">
+              <a href="/" class="menu-list-link">Portfolio</a>
+            </li>
+            <li class="menu-list-item">
+              <a href="/" class="menu-list-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="menu-address">
+          <ul class="menu-address-list">
+            <li class="menu-address-item">
+              <a href="mailto:info@devstudio.com" class="menu-address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="menu-address-item">
+              <a href="tel:+110001111111" class="menu-address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <div class="menu-social-link-container">
+          <ul class="menu-social-list">
+            <li class="menu-social-list-item">
+              <a href="/" class="menu-social-link">
+                <svg class="menu-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-social-list-item">
+              <a href="/" class="menu-social-link">
+                <svg class="menu-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-social-list-item">
+              <a href="/" class="menu-social-link">
+                <svg class="menu-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-social-list-item">
+              <a href="/" class="menu-social-link">
+                <svg class="menu-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
