--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
     </footer>
 
     <!-- modal -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -725,19 +725,17 @@
       </div>
     </div>
     <!-- BURGER MENU -->
-    <div class="burger-menu is-open">
+    <div class="burger-menu">
       <div class="burger-menu-container">
-        <button class="modal-close-btn" type="button">
-          <svg class="modal-btn-icon" width="8" height="8">
+        <button class="menu-close-btn" type="button">
+          <svg class="menu-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-icon-close"></use>
           </svg>
         </button>
         <nav class="menu-nav">
           <ul class="menu-list">
             <li class="menu-list-item">
-              <a href="./index.html" class="menu-list-link header-accent-link"
-                >Studio</a
-              >
+              <a href="./index.html" class="menu-list-link">Studio</a>
             </li>
             <li class="menu-list-item">
               <a href="/" class="menu-list-link">Portfolio</a>
